# vite-wasm-workers

./: .rswrc.json  index.html  package.json  readme.txt  settings.json  vite.config.js
fractals-wasm/: Cargo.toml
fractals-wasm/src/: lib.rs
fractals-wasm/src/color/: mod.rs
fractals-wasm/src/math/: complex.rs  julia.rs  mandelbrot.rs  mod.rs
src/: App.css  App.jsx
src/components/: canvas.jsx  fractal.jsx
src/fractals/: FractalsRenderer.js
src/fractals/worker/: fractals.worker.js  repeatedWorkerPool.js
tools/vite-plugin-rsw/: compiler.ts
